# traceloop-demo

./: .env.example  AGENTS.md  README.md  main.py  pyproject.toml
01hello/: hello.py
hello/: 01models.ipynb  02model_with_tools.ipynb  02tool.py  02tools.ipynb  03create_agent.ipynb
